SQuirreL SQL Client Change Log
==============================

3.7.0 (09/14/2015)
==================

Enhancements:

Feature request #521 Alias name in SQL History search dialog.

Upgraded to latest RSyntax version (2.5.6).
  The new version has a clipboard history which is accessible through ctrl shift v.
  A little drawback of the new version is that background colors are not supported in syntax styles.


Feature request #485 Execute multiple SQL statements on one click without selection
   The new feature executes all SQLs in the editor.
   If there are multiple SQLs in the editor the statement separator has to be used.
   The feature is accessible through a new tool bar button, tools popup and the alt shift ENTER key combination


Feature request #484 Query output preferences --> Allow table and text output simultaneously
   Note: SQL result output as table or editable table now includes text output in an extra tab.
         That's why there should be only few cases where choosing text output in Session Properties makes sense anymore.

Feature request #479 Add option for tab names to contain only Alias name
   The option can be found at menu File --> Global Preferences --> Tab General --> Bottom of section Appearance

Feature request #487 Show AS label as column header (if present)
   If a SQL result contains at least one column whose column name is not equal to its column label a button is shown at the header of the tab named "Result".
   By this button one can toggle display between column names and labels.
   Note: To configure the default display see menu File -> Global Preferences -> Tab Data Type Controls -> Top of panel.


WIKI table Plugin: Added support for JIRA/Confluence Markup Style
  Thanks to Thomas Hackel for the merge request.

Feature request #501 Overview/Charts Tab: Distinct Counts
  - Distinct counts for an Overview as a whole are now displayed right next to the column name
  - Distinct counts of Intervals are available as tool tips